5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1712_2496.log
== TEST (2019-05-08 14:18:37) 
-- CODE:
num = int(input("digite um numero:"))
cont == 0
while (num != -1):
	soma = num + cont
	num = int(input("digite um numero:"))
print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    cont == 0
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:19:13) 
-- CODE:
num = int(input("digite um numero:"))
cont = 0
while (num != -1):
	soma = num + cont
	num = int(input("digite um numero:"))
print(soma)
	
	
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:20:01) 
-- CODE:
num = int(input("digite um numero:"))
cont = 0
while (num != -1):
	soma = num + cont
	num = int(input("digite um numero:"))
	print(soma)
	
	
-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:20:13) 
-- CODE:
num = int(input("digite um numero:"))
cont = 0
while (num != -1):
	soma = num + cont
	num = int(input("digite um numero:"))
	print(soma)
	
	
-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:21:44) 
-- CODE:
num = int(input("digite um numero:"))

while (num != -1):
	soma = num 
	num = int(input("digite um numero:"))
print(soma)
	
	
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:24:21) 
-- CODE:
num = int(input("digite um numero:"))
cont = 0
while (num != -1):
	cont = num + num 
	num = int(input("digite um numero:"))
print(soma)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:24:40) 
-- CODE:
num = int(input("digite um numero:"))
cont = 0
while (num != -1):
	cont = num + num 
	num = int(input("digite um numero:"))
print(cont)
	
	
-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:28:03) 
-- CODE:
num = int(input("digite um numero:"))
cont = 0
while (num != -1):
	cont = num = cont
	num = int(input("digite um numero:"))
print(cont)
	
	
-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:28:30) 
-- CODE:
num = int(input("digite um numero:"))
cont = 0
while (num != -1):
	cont = num + cont
	num = int(input("digite um numero:"))
print(cont)
	
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:29:53) 
-- CODE:
num = int(input("digite um numero:"))
cont = 0
while (num != -1):
	cont = num + cont 
	num = int(input("digite um numero:"))
print(cont)
	
	
-- EXECUTION TIME:
0.186614
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
